--- a/Главная.css
+++ b/Главная.css
@@ -8,17 +8,17 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: 207px auto 0;
+  margin: 175px auto 0 371px;
 }
 
 .u-section-1 .u-text-2 {
   width: 760px;
-  margin: -8px auto 0;
+  margin: 39px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
-  margin: 41px auto 60px;
+  margin: 31px auto 60px;
 }
 
 @media (max-width: 1199px) {
@@ -30,11 +30,19 @@
   .u-section-1 .u-sheet-1 {
     min-height: 568px;
   }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 306px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
     min-height: 435px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 234px;
   }
 
   .u-section-1 .u-text-2 {
@@ -47,6 +55,10 @@
     min-height: 326px;
   }
 
+  .u-section-1 .u-text-1 {
+    margin-left: 176px;
+  }
+
   .u-section-1 .u-text-2 {
     width: 540px;
   }
@@ -55,6 +67,10 @@
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
     min-height: 205px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 111px;
   }
 
   .u-section-1 .u-text-2 {
@@ -157,92 +173,139 @@
     min-height: 358px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 561px;
-  margin-bottom: 0;
-}
-
-.u-section-3 .u-gallery-1 {
-  height: 471px;
-  margin-top: 30px;
-  margin-bottom: -3px;
-}
-
-.u-section-3 .u-gallery-item-1 {
-  margin-right: 10px;
-}
-
-.u-section-3 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 24px;
-}
-
-.u-section-3 .u-gallery-item-2 {
-  margin-right: 10px;
-}
-
-.u-section-3 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 24px;
-}
-
-.u-section-3 .u-gallery-item-3 {
-  margin-right: 10px;
-}
-
-.u-section-3 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 24px;
-}
-
-.u-section-3 .u-gallery-item-4 {
-  margin-right: 10px;
-}
-
-.u-section-3 .u-over-slide-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 24px;
-}
-
-.u-section-3 .u-gallery-nav-1 {
-  position: absolute;
-  left: 10px;
-  width: 40px;
-  height: 40px;
-  top: 216px;
-  padding: 11px;
-}
-
-.u-section-3 .u-gallery-nav-2 {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  left: auto;
-  top: 216px;
-  right: 10px;
-  padding: 11px;
-}.u-section-4 .u-sheet-1 {
   min-height: 463px;
 }
 
-.u-section-4 .u-layout-wrap-1 {
+.u-section-3 .u-layout-wrap-1 {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-4 .u-layout-cell-1 {
+.u-section-3 .u-layout-cell-1 {
   min-height: 463px;
 }
 
-.u-section-4 .u-container-layout-1 {
+.u-section-3 .u-container-layout-1 {
   padding: 30px 30px 30px 0;
 }
 
-.u-section-4 .u-text-1 {
+.u-section-3 .u-text-1 {
   margin: 0 0 0 16px;
 }
 
-.u-section-4 .u-text-2 {
+.u-section-3 .u-text-2 {
   margin: 21px 0 0 16px;
+}
+
+.u-section-3 .u-layout-cell-2 {
+  min-height: 463px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px 0;
+}
+
+.u-section-3 .u-image-1 {
+  width: 367px;
+  height: 338px;
+  margin: 16px auto 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 458px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    position: relative;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 382px;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 382px;
+  }
+
+  .u-section-3 .u-image-1 {
+    width: 313px;
+    height: 289px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 381px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 293px;
+  }
+
+  .u-section-3 .u-image-1 {
+    width: 240px;
+    height: 222px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 797px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 659px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 586px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 415px;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 523px;
+}
+
+.u-section-4 .u-layout-wrap-1 {
+  margin-top: 0;
+  margin-bottom: 54px;
+}
+
+.u-section-4 .u-layout-cell-1 {
+  min-height: 469px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 22px 19px;
+}
+
+.u-section-4 .u-image-1 {
+  height: auto;
+  margin: 17px 0 0;
 }
 
 .u-section-4 .u-layout-cell-2 {
@@ -250,13 +313,15 @@
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 30px 0;
+  padding: 30px 30px 30px 0;
 }
 
-.u-section-4 .u-image-1 {
-  width: 367px;
-  height: 338px;
-  margin: 16px auto 0;
+.u-section-4 .u-text-1 {
+  margin: 0;
+}
+
+.u-section-4 .u-text-2 {
+  margin: 21px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -269,27 +334,20 @@
   }
 
   .u-section-4 .u-layout-cell-1 {
-    min-height: 382px;
-  }
-
-  .u-section-4 .u-text-1 {
-    margin-left: 0;
-  }
-
-  .u-section-4 .u-text-2 {
-    margin-left: 0;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 382px;
+    min-height: 387px;
   }
 
   .u-section-4 .u-image-1 {
-    width: 313px;
-    height: 289px;
+    height: NaNpx;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 382px;
   }
 }
 
@@ -299,16 +357,11 @@
   }
 
   .u-section-4 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 296px;
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 293px;
-  }
-
-  .u-section-4 .u-image-1 {
-    width: 240px;
-    height: 222px;
+    min-height: 100px;
   }
 }
 
@@ -317,12 +370,17 @@
     min-height: 797px;
   }
 
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 333px;
+  }
+
   .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 659px;
+  .u-section-4 .u-container-layout-2 {
+    padding-right: 10px;
   }
 }
 
@@ -331,29 +389,32 @@
     min-height: 586px;
   }
 
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 415px;
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 210px;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 523px;
+  min-height: 463px;
 }
 
 .u-section-5 .u-layout-wrap-1 {
   margin-top: 0;
-  margin-bottom: 54px;
+  margin-bottom: 0;
 }
 
 .u-section-5 .u-layout-cell-1 {
-  min-height: 469px;
+  min-height: 463px;
 }
 
 .u-section-5 .u-container-layout-1 {
-  padding: 22px 19px;
+  padding: 30px 30px 30px 0;
 }
 
-.u-section-5 .u-image-1 {
-  height: auto;
-  margin: 17px 0 0;
+.u-section-5 .u-text-1 {
+  margin: 0 0 0 16px;
+}
+
+.u-section-5 .u-text-2 {
+  margin: 21px 0 0 16px;
 }
 
 .u-section-5 .u-layout-cell-2 {
@@ -361,15 +422,13 @@
 }
 
 .u-section-5 .u-container-layout-2 {
-  padding: 30px 30px 30px 0;
+  padding: 30px 0;
 }
 
-.u-section-5 .u-text-1 {
-  margin: 0;
-}
-
-.u-section-5 .u-text-2 {
-  margin: 21px 0 0;
+.u-section-5 .u-image-1 {
+  width: 367px;
+  height: 338px;
+  margin: 16px auto 0;
 }
 
 @media (max-width: 1199px) {
@@ -382,20 +441,27 @@
   }
 
   .u-section-5 .u-layout-cell-1 {
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 387px;
+    min-height: 382px;
   }
 
-  .u-section-5 .u-image-1 {
-    height: NaNpx;
-    margin-right: initial;
-    margin-left: initial;
+  .u-section-5 .u-text-1 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-text-2 {
+    margin-left: 0;
   }
 
   .u-section-5 .u-layout-cell-2 {
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
     min-height: 382px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 313px;
+    height: 289px;
   }
 }
 
@@ -405,11 +471,16 @@
   }
 
   .u-section-5 .u-layout-cell-1 {
-    min-height: 296px;
+    min-height: 100px;
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 100px;
+    min-height: 293px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 240px;
+    height: 222px;
   }
 }
 
@@ -418,17 +489,12 @@
     min-height: 797px;
   }
 
-  .u-section-5 .u-layout-cell-1 {
-    min-height: 333px;
-  }
-
   .u-section-5 .u-container-layout-1 {
-    padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-5 .u-container-layout-2 {
-    padding-right: 10px;
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 659px;
   }
 }
 
@@ -437,46 +503,45 @@
     min-height: 586px;
   }
 
-  .u-section-5 .u-layout-cell-1 {
-    min-height: 210px;
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 415px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 463px;
+  min-height: 522px;
 }
 
 .u-section-6 .u-layout-wrap-1 {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 
 .u-section-6 .u-layout-cell-1 {
-  min-height: 463px;
+  min-height: 521px;
 }
 
 .u-section-6 .u-container-layout-1 {
+  padding: 22px 19px;
+}
+
+.u-section-6 .u-image-1 {
+  height: auto;
+  margin: 0;
+}
+
+.u-section-6 .u-layout-cell-2 {
+  min-height: 521px;
+}
+
+.u-section-6 .u-container-layout-2 {
   padding: 30px 30px 30px 0;
 }
 
 .u-section-6 .u-text-1 {
-  margin: 0 0 0 16px;
+  margin: 9px 0 0;
 }
 
 .u-section-6 .u-text-2 {
-  margin: 21px 0 0 16px;
-}
-
-.u-section-6 .u-layout-cell-2 {
-  min-height: 463px;
-}
-
-.u-section-6 .u-container-layout-2 {
-  padding: 30px 0;
-}
-
-.u-section-6 .u-image-1 {
-  width: 367px;
-  height: 338px;
-  margin: 16px auto 0;
+  margin: 17px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -489,27 +554,20 @@
   }
 
   .u-section-6 .u-layout-cell-1 {
-    min-height: 382px;
-  }
-
-  .u-section-6 .u-text-1 {
-    margin-left: 0;
-  }
-
-  .u-section-6 .u-text-2 {
-    margin-left: 0;
-  }
-
-  .u-section-6 .u-layout-cell-2 {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 382px;
+    min-height: 430px;
   }
 
   .u-section-6 .u-image-1 {
-    width: 313px;
-    height: 289px;
+    height: NaNpx;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-layout-cell-2 {
+    min-height: 430px;
   }
 }
 
@@ -519,373 +577,313 @@
   }
 
   .u-section-6 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 293px;
-  }
-
-  .u-section-6 .u-image-1 {
-    width: 240px;
-    height: 222px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-6 .u-sheet-1 {
-    min-height: 797px;
-  }
-
-  .u-section-6 .u-container-layout-1 {
-    padding-right: 10px;
-  }
-
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 659px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-6 .u-sheet-1 {
-    min-height: 586px;
-  }
-
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 415px;
-  }
-}.u-section-7 .u-sheet-1 {
-  min-height: 522px;
-}
-
-.u-section-7 .u-layout-wrap-1 {
-  margin-top: 1px;
-  margin-bottom: 1px;
-}
-
-.u-section-7 .u-layout-cell-1 {
-  min-height: 521px;
-}
-
-.u-section-7 .u-container-layout-1 {
-  padding: 22px 19px;
-}
-
-.u-section-7 .u-image-1 {
-  height: auto;
-  margin: 0;
-}
-
-.u-section-7 .u-layout-cell-2 {
-  min-height: 521px;
-}
-
-.u-section-7 .u-container-layout-2 {
-  padding: 30px 30px 30px 0;
-}
-
-.u-section-7 .u-text-1 {
-  margin: 9px 0 0;
-}
-
-.u-section-7 .u-text-2 {
-  margin: 17px 0 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 458px;
-  }
-
-  .u-section-7 .u-layout-wrap-1 {
-    position: relative;
-  }
-
-  .u-section-7 .u-layout-cell-1 {
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 430px;
-  }
-
-  .u-section-7 .u-image-1 {
-    height: NaNpx;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 430px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 381px;
-  }
-
-  .u-section-7 .u-layout-cell-1 {
     min-height: 329px;
   }
 
-  .u-section-7 .u-layout-cell-2 {
+  .u-section-6 .u-layout-cell-2 {
     min-height: 100px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-7 .u-sheet-1 {
+  .u-section-6 .u-sheet-1 {
     min-height: 797px;
   }
 
-  .u-section-7 .u-layout-cell-1 {
+  .u-section-6 .u-layout-cell-1 {
     min-height: 333px;
   }
 
-  .u-section-7 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-7 .u-container-layout-2 {
+  .u-section-6 .u-container-layout-2 {
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-7 .u-sheet-1 {
+  .u-section-6 .u-sheet-1 {
     min-height: 586px;
   }
 
-  .u-section-7 .u-layout-cell-1 {
+  .u-section-6 .u-layout-cell-1 {
     min-height: 210px;
   }
-}.u-section-8 .u-sheet-1 {
-  min-height: 259px;
+}.u-section-7 .u-sheet-1 {
+  min-height: 483px;
 }
 
-.u-section-8 .u-text-1 {
-  margin: 60px 0 0;
+.u-section-7 .u-text-1 {
+  margin: 52px 0 0;
 }
 
-.u-section-8 .u-btn-1 {
+.u-section-7 .u-text-2 {
+  width: 239px;
+  margin: -73px auto 0;
+}
+
+.u-section-7 .u-btn-1 {
   background-image: none;
-  margin: 22px auto 18px;
-} .u-section-9 {
-  background-image: url("images/qyujWxuXkhQ.jpg");
+  padding: 0;
 }
 
-.u-section-9 .u-sheet-1 {
+.u-section-7 .u-btn-2 {
+  background-image: none;
+  margin: 52px auto 37px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-text-1 {
+    margin-top: 53px;
+  }
+
+  .u-section-7 .u-text-2 {
+    margin-top: -17px;
+  }
+
+  .u-section-7 .u-btn-2 {
+    margin-top: 15px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-btn-2 {
+    margin-top: -13px;
+    margin-bottom: 28px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-btn-2 {
+    margin-top: -7px;
+    margin-bottom: 22px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-btn-2 {
+    margin-top: -32px;
+    margin-bottom: 47px;
+  }
+} .u-section-8 {
+  background-image: url("images/qyujWxuXkhQ.jpg");
+  background-position: 50% 50%;
+}
+
+.u-section-8 .u-sheet-1 {
   min-height: 645px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-9 .u-sheet-1 {
+  .u-section-8 .u-sheet-1 {
     min-height: 505px;
   }
-}.u-section-10 .u-sheet-1 {
+}.u-section-9 .u-sheet-1 {
   min-height: 2337px;
 }
 
-.u-section-10 .u-text-1 {
+.u-section-9 .u-text-1 {
   margin: 60px auto 0;
 }
 
-.u-section-10 .u-layout-wrap-1 {
+.u-section-9 .u-layout-wrap-1 {
   margin-top: 60px;
   margin-bottom: 59px;
 }
 
-.u-section-10 .u-layout-cell-1 {
+.u-section-9 .u-layout-cell-1 {
   min-height: 2136px;
 }
 
-.u-section-10 .u-container-layout-1 {
+.u-section-9 .u-container-layout-1 {
   padding: 0;
 }
 
-.u-section-10 .u-image-1 {
+.u-section-9 .u-image-1 {
   height: 400px;
   width: 325px;
   margin: 153px auto 0;
 }
 
-.u-section-10 .u-text-2 {
+.u-section-9 .u-text-2 {
   width: 178px;
   margin: 20px auto 0;
 }
 
-.u-section-10 .u-text-3 {
+.u-section-9 .u-text-3 {
   margin: 8px 0 0;
 }
 
-.u-section-10 .u-image-2 {
+.u-section-9 .u-image-2 {
   height: 400px;
   width: 325px;
   margin: 22px auto 0;
 }
 
-.u-section-10 .u-text-4 {
+.u-section-9 .u-text-4 {
   width: 178px;
   margin: 20px auto 0;
 }
 
-.u-section-10 .u-text-5 {
+.u-section-9 .u-text-5 {
   margin: 18px 0 0;
 }
 
-.u-section-10 .u-layout-cell-2 {
+.u-section-9 .u-layout-cell-2 {
   min-height: 539px;
 }
 
-.u-section-10 .u-container-layout-2 {
+.u-section-9 .u-container-layout-2 {
   padding: 0;
 }
 
-.u-section-10 .u-image-3 {
+.u-section-9 .u-image-3 {
   height: 400px;
   width: 325px;
   margin: 0 auto;
 }
 
-.u-section-10 .u-text-6 {
+.u-section-9 .u-text-6 {
   margin: 30px auto 0;
 }
 
-.u-section-10 .u-text-7 {
+.u-section-9 .u-text-7 {
   margin: 20px auto 0 0;
 }
 
-.u-section-10 .u-layout-cell-3 {
+.u-section-9 .u-layout-cell-3 {
   min-height: 539px;
 }
 
-.u-section-10 .u-container-layout-3 {
+.u-section-9 .u-container-layout-3 {
   padding: 0;
 }
 
-.u-section-10 .u-image-4 {
+.u-section-9 .u-image-4 {
   height: 400px;
   width: 325px;
   margin: 0 auto;
 }
 
-.u-section-10 .u-text-8 {
+.u-section-9 .u-text-8 {
   margin: 30px auto 0;
 }
 
-.u-section-10 .u-text-9 {
+.u-section-9 .u-text-9 {
   margin: 20px auto 0 0;
 }
 
-.u-section-10 .u-layout-cell-4 {
+.u-section-9 .u-layout-cell-4 {
   min-height: 2136px;
 }
 
-.u-section-10 .u-container-layout-4 {
+.u-section-9 .u-container-layout-4 {
   padding: 0;
 }
 
-.u-section-10 .u-image-5 {
+.u-section-9 .u-image-5 {
   height: 400px;
   width: 325px;
   object-position: 0% 50%;
   margin: 153px auto 0;
 }
 
-.u-section-10 .u-text-10 {
+.u-section-9 .u-text-10 {
   width: 178px;
   margin: 18px auto 0;
 }
 
-.u-section-10 .u-text-11 {
+.u-section-9 .u-text-11 {
   margin: 20px 0 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-10 .u-sheet-1 {
+  .u-section-9 .u-sheet-1 {
     min-height: 1090px;
   }
 
-  .u-section-10 .u-layout-cell-1 {
+  .u-section-9 .u-layout-cell-1 {
     min-height: 1761px;
   }
 
-  .u-section-10 .u-image-1 {
+  .u-section-9 .u-image-1 {
     height: 361px;
     width: 293px;
   }
 
-  .u-section-10 .u-image-2 {
+  .u-section-9 .u-image-2 {
     height: 361px;
     width: 293px;
   }
 
-  .u-section-10 .u-layout-cell-2 {
+  .u-section-9 .u-layout-cell-2 {
     min-height: 444px;
   }
 
-  .u-section-10 .u-image-3 {
+  .u-section-9 .u-image-3 {
     height: 360px;
     width: 293px;
   }
 
-  .u-section-10 .u-layout-cell-3 {
+  .u-section-9 .u-layout-cell-3 {
     min-height: 444px;
   }
 
-  .u-section-10 .u-image-4 {
+  .u-section-9 .u-image-4 {
     height: 361px;
     width: 293px;
   }
 
-  .u-section-10 .u-layout-cell-4 {
+  .u-section-9 .u-layout-cell-4 {
     min-height: 1761px;
   }
 
-  .u-section-10 .u-image-5 {
+  .u-section-9 .u-image-5 {
     height: 361px;
     width: 293px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-10 .u-sheet-1 {
+  .u-section-9 .u-sheet-1 {
     min-height: 501px;
   }
 
-  .u-section-10 .u-layout-cell-1 {
+  .u-section-9 .u-layout-cell-1 {
     min-height: 100px;
   }
 
-  .u-section-10 .u-layout-cell-2 {
+  .u-section-9 .u-layout-cell-2 {
     min-height: 100px;
   }
 
-  .u-section-10 .u-layout-cell-3 {
+  .u-section-9 .u-layout-cell-3 {
     min-height: 100px;
   }
 
-  .u-section-10 .u-layout-cell-4 {
+  .u-section-9 .u-layout-cell-4 {
     min-height: 100px;
   }
-}.u-section-11 .u-sheet-1 {
+}.u-section-10 .u-sheet-1 {
   min-height: 331px;
 }
 
-.u-section-11 .u-text-1 {
+.u-section-10 .u-text-1 {
   font-weight: 700;
   line-height: 1.3;
   margin: 60px auto 0;
 }
 
-.u-section-11 .u-btn-1 {
+.u-section-10 .u-btn-1 {
   background-image: none;
   margin: 24px auto 16px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-11 .u-text-1 {
+  .u-section-10 .u-text-1 {
     height: 39px;
   }
 }
